--- a/EqUiWebUi/Views/NgacElectrode/TipwearBeforeChange.cshtml
+++ b/EqUiWebUi/Views/NgacElectrode/TipwearBeforeChange.cshtml
@@ -12,19 +12,25 @@
 
         <div class="panel-body">
                 @Html.Grid(Model).Named("DataGrid").Build(columns =>
-                   {
-                       columns.Add(c => c.controller_name).Titled("Robot").Filterable(true);
-                       columns.Add(c => c.TipchangeTimestamp).Titled("Tipchangetimestamp").Formatted("{0:dd-MM-yyyy HH:mm}").InitialSort(GridSortOrder.Desc);
-                       columns.Add(c => c.WearBeforeChange).Titled("Wear (mm)").Filterable(true);
-                       columns.Add(c => c.WeldsBeforeChange).Titled("#Welds").Filterable(true);
-                       columns.Add(c => c.DressBeforeChange).Titled("#Dress").Filterable(true);
-                       columns.Add(c => c.C_FixedWearBeforeChange).Titled("%FixedWear").Filterable(true);
-                       columns.Add(c => c.C_MoveWearBeforeChange).Titled("%MoveWear").Filterable(true);
-                       columns.Add(c => c.TipAge_h_).Titled("Electrode leeftijd(h)").Filterable(true);
-                   }).Sortable().Pageable(pager =>
-                   {
-                       pager.RowsPerPage = 20;
-                   }).Empty("No data found").Css("table-hover")
+           {
+           columns.Add(c => c.controller_name).Titled("Robot").Filterable(true);
+           columns.Add(c => c.TipchangeTimestamp).Titled("Tipchangetimestamp").Formatted("{0:dd-MM-yyyy HH:mm}").InitialSort(GridSortOrder.Desc);
+           columns.Add(c => c.WearBeforeChange).Titled("Wear (mm)").Filterable(true);
+           columns.Add(c => c.WeldsBeforeChange).Titled("#Welds").Filterable(true);
+           columns.Add(c => c.DressBeforeChange).Titled("#Dress").Filterable(true);
+           columns.Add(c => c.C_FixedWearBeforeChange).Titled("%FixedWear").Filterable(true);
+           columns.Add(c => c.C_MoveWearBeforeChange).Titled("%MoveWear").Filterable(true);
+           columns.Add(c => c.TipAge_h_).Titled("Electrode leeftijd(h)").Filterable(true);
+
+           columns.Add()
+             .Encoded(false)
+             .Filterable(false)
+             .Sortable(false)
+             .RenderedAs(c => MyEquiToolkit.SbcuTool(c.controller_name, "1")); //need to add the toolnumber in die model
+                }).Sortable().Pageable(pager =>
+           {
+                    pager.RowsPerPage = 20;
+                }).Empty("No data found").Css("table-hover")
         </div>
 
         <div class="panel-footer">
