--- a/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/Index.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/Index.cshtml
@@ -8,5 +8,12 @@
             <a href="~/Maximo_ui/WorkorderDetails/WoDetails?wonum=9709594" class="btn btn-primary btn-sm">Workoderdetails &raquo;</a>
             Workoderdetails wo =9709594 (test)
         </p>
+
+        <p></p>
+
+        <p>
+            <a href="~/Maximo_ui/WorkorderDetails/WoParentDetails?parentwonum=10324886" class="btn btn-primary btn-sm">Workoderdetails inc Childeren &raquo;</a>
+            Workoderdetails wo =10324886 (test)
+        </p>
     </div>
 </div>
