--- a/EqUiWebUi/Views/NgacElectrode/_TipStatus.cshtml
+++ b/EqUiWebUi/Views/NgacElectrode/_TipStatus.cshtml
@@ -10,6 +10,7 @@
     columns.Add(c => c.nRspots).Titled("Resterende Spots").Css("hidden");  //hide until trusted
     columns.Add(c => c.nRcars).Titled("Resterende Stukken").Css("hidden"); //hide until trusted
     columns.Add(c => c.TipAge_h_).Titled("Electrode leeftijd (h)");
+    columns.Add(c => c.MagicFiXedWear).Titled("MFW");
     columns.Add(c => c.Time_DressCycleTime).Titled("Dress ct (s)");
     columns.Add(c => c.LocationTree).Filterable(true).Css("hidden"); //used for filtering
                                                                      //launch sbcu tool
