Made new tiplife area and moved all tiplife stuff to it.
NExt step is to expand tiplife data features

--- a/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
@@ -90,7 +90,8 @@
             },
             reloadEnded: function () {
                 workorderOnLocationGridspinner.stop();
-                // this - grid instance which invoked the event
+                //simulate click on first row so that the details load automatic
+                $("#Workorders>table>tbody>tr:first").trigger('click');
             },
             reloadFailed: function (result) {
                 workorderOnLocationGridspinner.stop();
