--- a/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/_woParentDetails.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/_woParentDetails.cshtml
@@ -2,7 +2,7 @@
 
 <div class="panel panel-primary">
     <div class="panel-heading">
-        <h4>WoDetails @ViewBag.parentwonum (parent)</h4>
+        <h4>WoDetails <strong>@ViewBag.parentwonum</strong> (parent)</h4>
         <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
     </div>
 
@@ -14,7 +14,7 @@
 
 <div class="panel panel-warning">
     <div class="panel-heading">
-        <h4>WoDetails @ViewBag.parentwonum (childeren)</h4>
+        <h4>WoDetails <strong>@ViewBag.parentwonum</strong> (childeren)</h4>
         <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
     </div>
 
@@ -23,7 +23,7 @@
         {
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h6>WoDetails wo:@subWo.WONUM  location:@subWo.LOCATION  status:@subWo.STATUS (child)</h6>
+                    <h6>WoDetails wo:<strong>@subWo.WONUM</strong>  location:<strong>@subWo.LOCATION</strong>  status:<strong>@subWo.STATUS</strong> (child)</h6>
                 </div>
 
                 <div class="panel-body">
