--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
     </div>
     <div class="panel-body">
         <p>
-            <a href="~/NgacElectrode/index" class="btn btn-primary btn-sm">Electrode &raquo;</a>
+            <a href="~/Tiplife/NgacElectrode/index" class="btn btn-primary btn-sm">Electrode &raquo;</a>
             Alles in verband met de Electrodes van de nieuwe robots
         </p>
 
