--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -1,16 +1,16 @@
 ﻿
 <div class="jumbotron">
     <h2>Webviews tableau</h2>
-    <h5>(data update gebeurd nog NIET automatisch)</h5>
-    <h5>(gebruik user: e6308159 pw: e6308159 om in te loggen in tableau)</h5>
-    <h3>Welja ...misschien ooit als IT eindelijk die account aanmaakt... INC1939274 </h3>
+    <h5>(gebruik user: <strong>e6308159</strong> pw: <strong>e6308159</strong> om in te loggen in tableau)</h5>
     <hr />
     <h3>Gekende problemen</h3>
+
     Als tableau hier niet automatisch geladen wordt (grijs scherm)
-    Ga naar <a href="https://tableau-test.volvocars.biz" class="btn btn-primary btn-sm">Tableau server &raquo;</a> en log daar eerst in.
+    Ga naar <a href="https://tableau-test.volvocars.biz">Tableau server &raquo;</a> en log daar eerst in!
+    Kom na het inloggen terug naar <strongd>deze</strongd> pagina.
 
     Als de 'maximo' tools in tableau niet automatisch laden.
-    Ga naar <a href="https://equi" class="btn btn-primary btn-sm">https equi &raquo;</a>en probeer langs deze weg.
+    Ga naar <a href="https://equi"> https equi &raquo;</a>en klik daar op 'advanced' proceed. (werkt enkel in chrome)
 </div>
 
 <div>
