added view for tiplife expered

--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/Index.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/Index.cshtml
@@ -20,6 +20,15 @@
                 Weergave van waar er elektrodes gewisseld zijn geweest.
             </p>
             <p>
+                <a href="~/Tiplife/NgacElectrode/TipDressData?DataGrid-ErrorType-Contains=Max%20wear%20reached&DataGrid-Rows=20" class="btn btn-warning btn-sm">Lijst met elektrodes die niet op tijd werden gewisseld &raquo;</a>
+                Weergave van waar er elektrodes niet op tijd gewisseld zijn. (robot zelf naar onderhoud gegaan)
+            </p>
+            <p>
+                <a href="~/Tiplife/NgacElectrode/TipDressData" class="btn btn-primary btn-sm">TipDressData &raquo;</a>
+                Ruwe Tipdress data
+            </p>
+
+            <p>
                 <a href="~/Tiplife/NgacElectrode/PlanTipChange" class="btn btn-primary btn-sm">Plan tipchange &raquo;</a>
                 Onderhoudplannen
             </p>
