--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -95,6 +95,7 @@
     <div class="panel-body">
         <p>
             <a href="~/Alert/Alert/Index" class="btn btn-primary btn-sm">Index &raquo;</a>
+            Waarschuwingen gebaseerd op triggers
         </p>
     </div>
 </div>
