--- a/EqUiWebUi/Areas/Alert/Views/Alert/AASPOTAlertList.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/AASPOTAlertList.cshtml
@@ -15,10 +15,10 @@
 @Html.Grid(Model).Named("h_alert").Build(columns =>
 {
     columns.Add(c => c.id).Titled("id").Filterable(true).InitialSort(GridSortOrder.Desc);
-    columns.Add(c => c.location).Titled("location").Filterable(true);
+    columns.Add(c => c.location).Titled("location").Filterable(true).MultiFilterable(true);
     columns.Add(c => c.C_timestamp).Titled("C_timestamp").Formatted("{0:dd-MM-yyyy HH:mm}");
     columns.Add(c => c.info).Titled("info");
-    columns.Add(c => c.AcceptUser.username.Replace(@"VCCNET\", "")).Titled("AcceptUser").Filterable(true);
+    columns.Add(c => c.ChangedUser.username.Replace(@"VCCNET\", "")).Titled("ChangedUser").Filterable(true);
     columns.Add(c => c.triggerCount).Titled("TC").Filterable(true);
     //render dropdown to set alert status
     columns.Add(c => c.c_state.state)
