--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/PlanTipChange.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/PlanTipChange.cshtml
@@ -116,7 +116,7 @@
         </div>
 
         <div class="panel-footer">
-            <a href="~/NgacElectrode/Index" class="btn-xs btn-primary">Electrode home &raquo;</a>
+            <a href="~/Tiplife/NgacElectrode/Index" class="btn-xs btn-primary">Electrode home &raquo;</a>
         </div>
     </div>
 
