--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/TipwearBeforeChange.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/TipwearBeforeChange.cshtml
@@ -35,7 +35,7 @@
         </div>
 
         <div class="panel-footer">
-            <a href="~/NgacElectrode/Index" class="btn-xs btn-primary">Electrode home &raquo;</a>
+            <a href="~/Tiplife/NgacElectrode/Index" class="btn-xs btn-primary">Electrode home &raquo;</a>
             <p>DNBC = DeltaNomBeforeChange if smaller than 0.1 tips are NOT changed.</p>
         </div>
     </div>
