added check statement in Alert system

--- a/EqUiWebUi/App_Code/MyFilters.cshtml
+++ b/EqUiWebUi/App_Code/MyFilters.cshtml
@@ -25,6 +25,7 @@
         <select class="form-control input-sm" id="@id" name="Select location">
             <option style="display:none"> -- select a location -- </option>
             <option value="">no Filter</option>
+            <option value="VCG -> A">GA (all)</option>
             <optgroup label="CMA UB12 floorline">
                 <option value="VCG -> A -> A GA1.0 -> A LIJN 33">Floor (all)</option>
                 <option value="VCG -> A -> A GA1.0 -> A LIJN 331">Frontstructure</option>
