--- a/EqUiWebUi/Views/Dynamic/DynamicWebgrid.cshtml
+++ b/EqUiWebUi/Views/Dynamic/DynamicWebgrid.cshtml
@@ -6,9 +6,7 @@
           content="width=device-width" />
 
     <title> DisplayGrid  </title>
-
-    <link href="https://code.jquery.com/ui/1.12.0-rc.2/themes/smoothness/jquery-ui.css" rel="stylesheet" />
-
+    <link href="~/Content/jquery-ui.css" rel="stylesheet" />
     <style type="text/css">
         .mainpanel {
             margin-left: 230px;
